# irithyll

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RESPONSIBLE_USE.md  SNN_RESEARCH.md  SSM_RESEARCH.md
.github/workflows/: ci.yml  pages.yml
benches/: comparison_bench.rs  ensemble_bench.rs  histogram_bench.rs  packed_bench.rs  packed_inference_bench.rs  parallel_bench.rs  pipeline_bench.rs  quantized_bench.rs  real_dataset_bench.rs  real_world_bench.rs  scaling_bench.rs  throughput_bench.rs  training_bench.rs  tree_bench.rs
comparison/: Cargo.toml  collect_results.py
comparison/benches/: comparison.rs
comparison/river/: airlines_learning_curve.csv  airlines_results.csv  bench_river.py  covertype_learning_curve.csv  covertype_results.csv  electricity_learning_curve.csv  electricity_results.csv
comparison/src/: lib.rs
comparison/xgboost/: airlines_results.csv  bench_xgb.py  covertype_results.csv  electricity_results.csv
datasets/: download.py
examples/: async_ingestion.rs  automl.rs  basic_regression.rs  ccipca_reduction.rs  classification.rs  custom_loss.rs  drift_detection.rs  kan_regression.rs  krls_nonlinear.rs  model_checkpointing.rs  neural_moe.rs  pipeline_composition.rs  rls_confidence.rs  streaming_metrics.rs
irithyll-cli/: Cargo.toml
irithyll-cli/src/: config.rs  data.rs  main.rs  output.rs
irithyll-cli/src/commands/: config.rs  eval.rs  export.rs  inspect.rs  mod.rs  predict.rs  train.rs
irithyll-cli/src/tui/: app.rs  mod.rs  theme.rs
irithyll-core/: Cargo.toml  README.md  build.rs  memory.x
irithyll-core/.cargo/: config.toml
irithyll-core/examples/: cortex_m_bench.rs  cortex_m_drift.rs  cortex_m_hello.rs  cortex_m_stress.rs  cortex_m_validation.rs
irithyll-core/src/: error.rs  feature.rs  learner.rs  lib.rs  math.rs  packed.rs  packed_i16.rs  quantize.rs  sample.rs  traverse.rs  traverse_i16.rs  view.rs  view_i16.rs
irithyll-core/src/attention/: config.rs  gating.rs  mod.rs  multi_head.rs  state.rs  update_rules.rs
irithyll-core/src/continual/: ewc.rs  mod.rs  parameter_isolation.rs  regeneration.rs
irithyll-core/src/drift/: adwin.rs  ddm.rs  mod.rs  pht.rs
irithyll-core/src/ensemble/: adaptive.rs  adaptive_forest.rs  bagged.rs  config.rs  distributional.rs  lr_schedule.rs  mod.rs  moe.rs  moe_distributional.rs  multi_target.rs  multiclass.rs  parallel.rs  quantile_regressor.rs  replacement.rs  stacked.rs  step.rs  variants.rs
irithyll-core/src/histogram/: bins.rs  categorical.rs  kmeans.rs  mod.rs  quantile.rs  simd.rs  uniform.rs
irithyll-core/src/loss/: expectile.rs  huber.rs  logistic.rs  mod.rs  quantile.rs  softmax.rs  squared.rs
irithyll-core/src/reservoir/: cycle.rs  delay_buffer.rs  mod.rs  polynomial.rs  prng.rs
irithyll-core/src/simd/: mod.rs  ops.rs
irithyll-core/src/snn/: eprop.rs  lif.rs  mod.rs  network_fixed.rs  readout.rs  spike_encoding.rs
irithyll-core/src/ssm/: diagonal.rs  discretize.rs  init.rs  mod.rs  projection.rs  selective.rs
irithyll-core/src/tree/: builder.rs  hoeffding.rs  hoeffding_classifier.rs  leaf_model.rs  node.rs  predict.rs  split.rs
irithyll-python/: Cargo.toml  pyproject.toml  test_model.json
irithyll-python/src/: lib.rs
marketing/: devto_outline.md  reddit_ml.md  reddit_rust.md
research/: reservoir_computing_v9.md
src/: arrow_support.rs  error.rs  export_embedded.rs  learner.rs  lib.rs  onnx_export.rs  pipeline.rs  sample.rs  serde_support.rs
src/anomaly/: hst.rs  mod.rs
src/attention/: attention_config.rs  attention_preprocessor.rs  mod.rs  streaming_attention.rs
src/automl/: auto_builder.rs  auto_tuner.rs  config_space.rs  factories.rs  mod.rs  reward.rs
src/bandits/: discounted_thompson.rs  epsilon_greedy.rs  lin_ucb.rs  mod.rs  thompson.rs  ucb.rs
src/clustering/: clustream.rs  dbstream.rs  kmeans.rs  mod.rs
src/continual/: continual_wrapper.rs  mod.rs
src/drift/: adwin.rs  ddm.rs  drift_aware.rs  mod.rs  pht.rs  state.rs
src/ensemble/: adaptive.rs  adaptive_forest.rs  bagged.rs  config.rs  diagnostics.rs  distributional.rs  lr_schedule.rs  mod.rs  moe.rs  moe_distributional.rs  multi_target.rs  multiclass.rs  parallel.rs  quantile_regressor.rs  replacement.rs  stacked.rs  step.rs  variants.rs
src/evaluation/: mod.rs  prequential.rs  progressive.rs
src/explain/: importance_drift.rs  mod.rs  streaming.rs  treeshap.rs
src/generators/: agrawal.rs  friedman.rs  hyperplane.rs  led.rs  lorenz.rs  mackey_glass.rs  mod.rs  rbf.rs  sea.rs  waveform.rs
src/histogram/: bins.rs  categorical.rs  kmeans.rs  mod.rs  quantile.rs  simd.rs  uniform.rs
src/kan/: bspline.rs  layer.rs  mod.rs
src/learners/: classification.rs  krls.rs  linear.rs  mod.rs  mondrian.rs  multinomial_bernoulli_nb.rs  naive_bayes.rs  rls.rs
src/loss/: expectile.rs  huber.rs  logistic.rs  mod.rs  quantile.rs  softmax.rs  squared.rs
src/metrics/: auc.rs  classification.rs  conformal.rs  conformal_pid.rs  ewma.rs  importance.rs  kappa.rs  mod.rs  platt_scaling.rs  quantile_tracker.rs  regression.rs  rolling.rs  strongly_adaptive.rs  temperature_scaling.rs
src/moe/: mod.rs  router.rs
src/preprocessing/: ccipca.rs  feature_hasher.rs  feature_selector.rs  min_max.rs  mod.rs  normalizer.rs  one_hot.rs  polynomial.rs  target_encoder.rs
src/reservoir/: esn.rs  esn_config.rs  esn_preprocessor.rs  mod.rs  ngrc.rs  ngrc_config.rs
src/snn/: mod.rs  spike_preprocessor.rs  spikenet.rs  spikenet_config.rs
src/ssm/: mamba.rs  mamba_config.rs  mamba_preprocessor.rs  mod.rs
src/stream/: adapters.rs  channel.rs  mod.rs
src/time_series/: decomposition.rs  holt_winters.rs  mod.rs  snarimax.rs
src/tree/: builder.rs  hoeffding.rs  hoeffding_classifier.rs  leaf_model.rs  mod.rs  node.rs  predict.rs  split.rs
src/ttt/: layer.rs  mod.rs
tests/: convergence.rs  generate_bench_model.rs  integration_drift.rs  integration_sgbt.rs  property_tests.rs
