[package]
name = "irithyll"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Streaming Gradient Boosted Trees for evolving data streams"
license = "MIT OR Apache-2.0"
repository = "https://github.com/evilrat420/irithyll"
keywords = ["machine-learning", "gradient-boosting", "streaming", "online-learning", "decision-trees"]
categories = ["algorithms", "science"]

[dependencies]
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
bincode = { version = "2", optional = true }
thiserror = "2.0"
tracing = "0.1"

# Optional acceleration dependencies (activated via feature flags)
rayon = { version = "1.10", optional = true }
dashmap = { version = "6.1", optional = true }

[dev-dependencies]
proptest = "1.5"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["serde-json"]
serde-json = ["dep:serde_json"]
serde-bincode = ["dep:bincode"]
kmeans-binning = []
simd = []
parallel = ["dep:rayon", "dep:dashmap"]
full = ["serde-json", "serde-bincode", "kmeans-binning", "parallel"]

[[bench]]
name = "histogram_bench"
harness = false

[[bench]]
name = "tree_bench"
harness = false

[[bench]]
name = "ensemble_bench"
harness = false
