[package]
name = "irithyll-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Command-line interface for irithyll streaming ML"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "irithyll"
path = "src/main.rs"

[dependencies]
irithyll = { path = "..", features = ["serde-json", "arrow", "parquet"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Progress & output
indicatif = "0.17"
comfy-table = "7"

# Data
csv = "1.3"

# Error handling
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true, features = ["event-stream"] }

# Async (for TUI event loop)
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tokio"]
