[package]
name = "irithyll-python"
version = "3.0.0"
edition = "2021"
rust-version = "1.75"
description = "Python bindings for irithyll streaming gradient boosted trees"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "irithyll_python"
crate-type = ["cdylib"]

[dependencies]
irithyll = { path = "..", features = ["serde-json"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
