[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "irithyll"
version = "3.0.0"
description = "Python bindings for irithyll streaming gradient boosted trees"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
dependencies = ["numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module"]
